# stringart.in

./: .gitignore  .nojekyll  CNAME  README.md  _quarto.yml  about.html  about.qmd  app.json  buy.html  contact.html  contact.qmd  faqs.html  index.html  index.qmd  listings.json  resouces.html  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
_theme/: theme-dark.scss
_theme/hero/: title-block.html
api/: README.md  api.py  pyproject.toml
api/templates/: email_order_confirmation.html
assets/: index-BuRGFcK-.js  index-CzpYPpE5.css  index-D51jdxgr.js
backend/: Makefile  app.go  cli.go  db.go  go.mod  go.sum  models.go  server.go
designs/: Makefile  build.py
designs/pdf/: README.md
designs/src/: _designs.py  concentric-circles-2.py  concentric-circles.py  eight-star.py  flower-6.py  flower.py  hexagon.py  square.py  triangle.py
frontend/: Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: app.json
frontend/scripts/: build-app-json.cjs  build-app-json.js  qrcode.cjs
frontend/src/: App.tsx  gallery.yaml
patterns/: build.py  cardoid.html  dew-drop.html  dewdrop.html  dewdrop.qmd  double-ring.html  index.html  index.qmd  mystic-rose.html  mystic-rose.qmd  radial.html  radial.qmd  ring.html  wheel.html  wheel.qmd
patterns/images/: cardoid.py  dewdrop.py  mystic-rose-step1.py  mystic-rose-step2.py  radial.py
website/: _quarto.yml  about.qmd  buy.qmd  contact.qmd  faqs.qmd  index.qmd  resouces.qmd
website/patterns/: Makefile  cardoid.qmd  double-ring.qmd  (+2 more)
(+62 files in other folders)
